<resources>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_menu_alt_shortcut_label">Alt+</string>
    <string name="abc_menu_ctrl_shortcut_label">Ctrl+</string>
    <string name="abc_menu_delete_shortcut_label">delete</string>
    <string name="abc_menu_enter_shortcut_label">enter</string>
    <string name="abc_menu_function_shortcut_label">Function+</string>
    <string name="abc_menu_meta_shortcut_label">Meta+</string>
    <string name="abc_menu_shift_shortcut_label">Shift+</string>
    <string name="abc_menu_space_shortcut_label">space</string>
    <string name="abc_menu_sym_shortcut_label">Sym+</string>
    <string name="abc_prepend_shortcut_label">Menu+</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="access_add_app">Add a Game or App</string>
    <string name="access_clean_mem">Clean Memory</string>
    <string name="access_contact">Contact Us</string>
    <string name="access_help">Help and Tips</string>
    <string name="access_rate">Rate this app</string>
    <string name="activity_credits_subtitle">Complete the tasks in the list below to earn credtis</string>
    <string name="activity_credits_title">Earn Credits</string>
    <string name="apnxt_banner_1_install">Install</string>
    <string name="apnxt_large_banner_1_install">Install</string>
    <string name="apnxt_medium_rectangle_1_install">Install</string>
    <string name="apnxt_which_video">Which Video <b>would you like to watch?</b></string>
    <string name="app_invite_share">Hey, check out this app</string>
    <string name="app_is_running_foreground">Automatic boost is active</string>
    <string name="app_list_error">App list error. Please try again</string>
    <string name="app_list_hint">Add a game or app to your boost list!</string>
    <string name="app_name">Game Booster PerforMAX</string>
    <string name="appbar_scrolling_view_behavior">com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior</string>
    <string name="appnxt_s1t1_item_play_game">Play this video</string>
    <string name="appnxt_s1t1_second_title">"would you like
to watch?"</string>
    <string name="appnxt_s1t1_timer">6 sec</string>
    <string name="appnxt_s1t1_title">Which Video</string>
    <string name="appnxt_s1t2_item_title">First game label First game label</string>
    <string name="appnxt_s1t2_second_title">would you like to watch?</string>
    <string name="appnxt_s1t2_timer">6 sec</string>
    <string name="appnxt_s1t2_title">Which Video</string>
    <string name="appnxt_s1t3_item_title">First game label First game label</string>
    <string name="appnxt_s1t3_second_title">would you like to watch?</string>
    <string name="appnxt_s1t3_timer">6 sec</string>
    <string name="appnxt_s1t3_title">Which Video</string>
    <string name="appnxt_s2t1_google_play">You will be redirected to Google Play once the ad will finish</string>
    <string name="appnxt_s2t1_install">Install</string>
    <string name="appnxt_s3t1_install">Install</string>
    <string name="appnxt_s3t1_thanks_for_watching">Thanks for watching!</string>
    <string name="appnxt_s3t2_install">Install</string>
    <string name="appnxt_s3t2_thanks_for_watching">Thanks for watching!</string>
    <string name="auto_boost_apps">Auto Boost</string>
    <string name="auto_boost_started">Auto Boost Started</string>
    <string name="autoboost_not_compatible">Sorry, this option is not supported in Android 5.1.1 and above due to recent restrictions</string>
    <string name="boost_from_notification">"Boost From
Notification"</string>
    <string name="bottom_sheet_behavior">com.google.android.material.bottomsheet.BottomSheetBehavior</string>
    <string name="btn_install">Install</string>
    <string name="btn_invite">Invite</string>
    <string name="cancel">Cancel</string>
    <string name="character_counter_content_description">Characters entered %1$d of %2$d</string>
    <string name="character_counter_overflowed_content_description">Character limit exceeded %1$d of %2$d</string>
    <string name="character_counter_pattern">%1$d / %2$d</string>
    <string name="chip_text">Chip text</string>
    <string name="clear_text_end_icon_content_description">Clear text</string>
    <string name="common_google_play_services_enable_button">Enable</string>
    <string name="common_google_play_services_enable_text">"%1$s won't work unless you enable Google Play services."</string>
    <string name="common_google_play_services_enable_title">Enable Google Play services</string>
    <string name="common_google_play_services_install_button">Install</string>
    <string name="common_google_play_services_install_text">"%1$s won't run without Google Play services, which are missing from your device."</string>
    <string name="common_google_play_services_install_title">Get Google Play services</string>
    <string name="common_google_play_services_notification_channel_name">Google Play services availability</string>
    <string name="common_google_play_services_notification_ticker">Google Play services error</string>
    <string name="common_google_play_services_unknown_issue">%1$s is having trouble with Google Play services. Please try again.</string>
    <string name="common_google_play_services_unsupported_text">"%1$s won't run without Google Play services, which are not supported by your device."</string>
    <string name="common_google_play_services_update_button">Update</string>
    <string name="common_google_play_services_update_text">"%1$s won't run unless you update Google Play services."</string>
    <string name="common_google_play_services_update_title">Update Google Play services</string>
    <string name="common_google_play_services_updating_text">"%1$s won't run without Google Play services, which are currently updating."</string>
    <string name="common_google_play_services_wear_update_text">New version of Google Play services needed. It will update itself shortly.</string>
    <string name="common_open_on_phone">Open on phone</string>
    <string name="common_signin_button_text">Sign in</string>
    <string name="common_signin_button_text_long">Sign in with Google</string>
    <string name="copy_invite">Copy link</string>
    <string name="credits_awarded">Credits Awarded</string>
    <string name="customize_invite">Customize your invitation text</string>
    <string name="date_format_month_day">EEEE, MMMM d</string>
    <string name="date_format_year_month_day">EEEE, MMMM d yyyy</string>
    <string name="desc_auto_boost">Your selected games will automatically be boosted and you will not need to open this app first</string>
    <string name="desc_boost_now">This option will optimize your memory now.</string>
    <string name="desc_notification_boost">This option will create a notification that you can click every time you want to perform an optimization boost</string>
    <string name="dialog_contact_hint">How can we help?</string>
    <string name="dialog_do_not_show">Do not show again</string>
    <string name="dialog_opt_list">Add to List</string>
    <string name="dialog_opt_run">Boost and Play Now!</string>
    <string name="dialog_title">Contact Support</string>
    <string name="done_memory_boost">Memory Boost Done!</string>
    <string name="earn_more_credits">Get credits</string>
    <string name="empty" />
    <string name="epom_interstitial">6ccabb923e8fd2d658c41c6f61ec256d</string>
    <string name="epom_rewarded">f0baadebb6868ab19f473db92b9f6635</string>
    <string name="expand_to_see_actions">Expand to see actions</string>
    <string name="fab_transformation_scrim_behavior">com.google.android.material.transformation.FabTransformationScrimBehavior</string>
    <string name="fab_transformation_sheet_behavior">com.google.android.material.transformation.FabTransformationSheetBehavior</string>
    <string name="facebook_app_id">389701991399422</string>
    <string name="failed_to_get_more">Failed to load more.</string>
    <string name="failed_to_load">Failed to load.</string>
    <string name="failed_to_refresh">Failed to refresh.</string>
    <string name="free_mem_label">Free Memory</string>
    <string name="getting_more">Loading more…</string>
    <string name="hide_bottom_view_on_scroll_behavior">com.google.android.material.behavior.HideBottomViewOnScrollBehavior</string>
    <string name="icon_content_description">Dialog Icon</string>
    <string name="instruction_1">Add a game to your list</string>
    <string name="instruction_2">Press the red Play button on the game or app you want to boost</string>
    <string name="instruction_3">Enjoy a new world of performance!</string>
    <string name="instructions_stats_permissions">"To enable the Auto Boost feature please grant a permission that lets the app know when you are running one of your selected games. To grant permission follow these steps: 

 1. Select Game Booster PerforMAX from the following list. 

 2. Enable requested permission. 

 Done!"</string>
    <string name="instructions_stats_title">Permission Request</string>
    <string name="instructions_title">Instructions</string>
    <string name="item_app_icon">App icon</string>
    <string name="item_app_name">Sample App Name</string>
    <string name="just_before">Just before</string>
    <string name="link_copied">Link copied</string>
    <string name="load_time_explain">If this is the first launch, or if you installed or uninstalled an app, this could take a while. Next time it will launch immediately!</string>
    <string name="loading">Loading…</string>
    <string name="market_link_error">You need the Play Store app to rate</string>
    <string name="mtrl_chip_close_icon_content_description">Remove %1$s</string>
    <string name="mtrl_picker_cancel">Cancel</string>
    <string name="mtrl_picker_confirm">Save</string>
    <string name="mtrl_picker_header_prompt">Pick a Date</string>
    <string name="mtrl_picker_header_selected">%1$s</string>
    <string name="mtrl_picker_range_header_prompt">Pick a Date Range</string>
    <string name="mtrl_picker_range_header_selected">%1$s - %2$s</string>
    <string name="navigation_drawer_close">Close Menu</string>
    <string name="navigation_drawer_open">Open Menu</string>
    <string name="no">No</string>
    <string name="no_credits_req">This funcionality is free. No credits required!</string>
    <string name="no_email_clients">No email clients found</string>
    <string name="option_locked">This feature requires:credits</string>
    <string name="premium_CTA">Get Premium App!</string>
    <string name="premium_features">Premium features</string>
    <string name="premium_noads_desc">Enjoy all features without restrictions or ads</string>
    <string name="premium_noads_title">No Ads + All Features</string>
    <string name="use_credits">Use Credits</string>
    <string name="you_have_credits">You have:credits</string>
</resources>