<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView android:id="@id/card_view_premium" android:layout_width="fill_parent" android:layout_height="wrap_content" app:cardBackgroundColor="@color/colorPrimary" app:cardCornerRadius="10.0dip" app:cardElevation="5.0dip" app:contentPadding="8.0dip" app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="parent"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <androidx.constraintlayout.widget.ConstraintLayout android:id="@id/inner_constraint" android:layout_width="fill_parent" android:layout_height="wrap_content" android:animateLayoutChanges="true">
        <TextView android:textSize="15.0sp" android:textColor="@android:color/white" android:id="@id/textView7" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="8.0dip" android:text="@string/premium_features" android:textAllCaps="true" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintHorizontal_bias="0.5" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="parent" />
        <ToggleButton android:layout_gravity="center_horizontal" android:id="@id/btn_auto_boost" android:background="@drawable/btn_auto_boost" android:focusable="true" android:visibility="gone" android:clickable="true" android:layout_width="40.0dip" android:layout_height="40.0dip" android:layout_marginLeft="8.0dip" android:layout_marginTop="8.0dip" android:layout_marginRight="8.0dip" android:checked="false" android:scaleType="fitCenter" android:adjustViewBounds="true" android:textOn="" android:textOff="" app:layout_constraintEnd_toStartOf="@id/guideline" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/textView7" />
        <TextView android:textSize="12.0sp" android:textColor="#ffdddddd" android:id="@id/auto_boost_label" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="8.0dip" android:layout_marginBottom="8.0dip" android:text="@string/auto_boost_apps" app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="@id/btn_auto_boost" app:layout_constraintStart_toStartOf="@id/btn_auto_boost" app:layout_constraintTop_toBottomOf="@id/btn_auto_boost" />
        <ImageButton android:layout_gravity="center_horizontal" android:id="@id/btn_clean_mem_stats" android:background="?selectableItemBackgroundBorderless" android:visibility="gone" android:clickable="true" android:layout_width="40.0dip" android:layout_height="40.0dip" android:layout_marginLeft="8.0dip" android:layout_marginTop="8.0dip" android:layout_marginRight="8.0dip" android:src="@drawable/btn_bar_clean_mem" android:scaleType="fitCenter" android:adjustViewBounds="true" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="@id/guideline2" app:layout_constraintTop_toBottomOf="@id/textView7" />
        <TextView android:textSize="12.0sp" android:textColor="#ffdddddd" android:id="@id/clean_mem_btn_label" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="8.0dip" android:layout_marginBottom="8.0dip" android:text="@string/access_clean_mem" app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="@id/btn_clean_mem_stats" app:layout_constraintStart_toStartOf="@id/btn_clean_mem_stats" app:layout_constraintTop_toBottomOf="@id/btn_clean_mem_stats" />
        <ToggleButton android:layout_gravity="center_horizontal" android:id="@id/btn_notification" android:background="@drawable/btn_notification" android:focusable="true" android:visibility="gone" android:clickable="true" android:layout_width="40.0dip" android:layout_height="40.0dip" android:layout_marginLeft="8.0dip" android:layout_marginTop="8.0dip" android:layout_marginRight="8.0dip" android:checked="false" android:scaleType="fitCenter" android:adjustViewBounds="true" android:textOn="" android:textOff="" app:layout_constraintEnd_toStartOf="@id/guideline2" app:layout_constraintHorizontal_bias="0.5" app:layout_constraintStart_toStartOf="@id/guideline" app:layout_constraintTop_toBottomOf="@id/textView7" />
        <TextView android:textSize="12.0sp" android:textColor="#ffdddddd" android:id="@id/notification_label" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="8.0dip" android:layout_marginTop="8.0dip" android:layout_marginRight="8.0dip" android:layout_marginBottom="8.0dip" android:text="@string/boost_from_notification" app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toStartOf="@id/guideline2" app:layout_constraintStart_toStartOf="@id/guideline" app:layout_constraintTop_toBottomOf="@id/btn_notification" />
        <androidx.constraintlayout.widget.Guideline android:orientation="vertical" android:id="@id/guideline" android:layout_width="wrap_content" android:layout_height="wrap_content" app:layout_constraintGuide_percent="0.333" />
        <androidx.constraintlayout.widget.Guideline android:orientation="vertical" android:id="@id/guideline2" android:layout_width="wrap_content" android:layout_height="wrap_content" app:layout_constraintGuide_percent="0.666" />
        <ImageView android:id="@id/img_drop_down" android:visibility="visible" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="8.0dip" app:layout_constraintBottom_toBottomOf="@id/textView7" app:layout_constraintStart_toEndOf="@id/textView7" app:layout_constraintTop_toTopOf="@id/textView7" app:srcCompat="@drawable/ic_drop_down" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>